Fixed font sizes, button visibility

--- a/style.scss
+++ b/style.scss
@@ -6,7 +6,10 @@ $primary: #78cf53ac;
 $secondary: #1a71bc;
 $bg: #F5f5f5;
 :root{
-    font-size:15px;
+    font-size:10px;
+}
+body{
+    font-size:1.8rem;
 }
 :root,
 * {
@@ -70,7 +73,7 @@ button:hover {
 
 /*Header styles*/
 h1 {
-    font-size: 1rem;
+    font-size: 2rem;
     justify-self: start;
     margin-right: auto;
 }
@@ -94,7 +97,7 @@ header {
 
 nav {
     background-color: $bg;
-    max-height: 25px;
+
     @include base.breakpoint-nav;
 
     ul {
@@ -115,7 +118,7 @@ nav {
 
 
 
-    i {
+    button {
         @include base.nav-button;
         display: none;
         float: right;
@@ -143,7 +146,7 @@ nav {
 
     h2 {
         margin: 0px 5px;
-        font-size: 2.5rem;
+        font-size: 6rem;
         background-color: #b1d1f077;
         border: solid 3px white;
         outline: solid 4px $primary;
@@ -186,7 +189,7 @@ nav {
             text-align: center;
 
             i {
-                font-size: 2rem;
+                font-size: 5rem;
                 margin: 20px
             }
         }
@@ -304,7 +307,7 @@ nav {
 
                 i {
                     color: $primary;
-                    font-size: 3em;
+                    font-size: 9rem;
                     margin: 10px 0px;
                 }
             }
@@ -347,7 +350,7 @@ nav {
 
         i {
             color: $primary;
-            font-size: 4rem;
+            font-size: 10rem;
             margin: 10px 0px;
         }
 
@@ -369,7 +372,7 @@ nav {
 
 footer {
 
-    font-size: 0.8rem;
+    font-size: 1.4rem;
     color: white;
     background-color: $secondary;
     padding: 10px;
@@ -401,7 +404,7 @@ footer {
             margin: 5px 10px;
 
             i {
-                font-size: 1.5rem;
+                font-size: 3rem;
             }
 
         }
